--- a/index.html
+++ b/index.html
@@ -27,6 +27,42 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <h1>Начало лендинга</h1>
+    <section class="welcome-block">
+        <h2 class="welcome-block_title">Вступайте<br>в клуб<br>Самокатов</h2>
+        <div class="welcome-block_description">
+            <p class="welcome-block_description-text">Купите абонемент, чтобы стать частью клуба в новом сезоне 2024. 8 месяцев за</p>
+            <div class="welcome-block_description-price price-tag">
+                <div class="price-tag_new">499 ₽</div>
+                <div class="price-tag_old">3190 ₽</div>
+            </div>
+        </div>
+        <a href="#" class="welcome-block_action button">Стать частью клуба</a>
+
+        <picture class="welcome-block_main-image">
+            <source srcset="assets/img/welcome-block-image-m.webp" type="image/webp" media="(max-width: 525px)">
+            <source srcset="assets/img/welcome-block-image-m.png" type="image/png" media="(max-width: 525px)">
+
+            <source srcset="assets/img/welcome-block-image.webp" type="image/webp" media="(min-width: 921px)">
+            <source srcset="assets/img/welcome-block-image.png" type="image/png" media="(min-width: 921px)">
+
+            <source srcset="assets/img/welcome-block-image-t.webp" type="image/webp" media="(min-width: 526px)">
+            <source srcset="assets/img/welcome-block-image-t.png" type="image/png" media="(min-width: 526px)">
+
+            <img src="assets/img/welcome-block-image.png" alt="Самокат Яндекс GO" width="927" height="923">
+        </picture>
+
+        <picture class="welcome-block_text-image">
+            <source srcset="assets/img/welcome-block-text-m.webp" type="image/webp" media="(max-width: 525px)">
+            <source srcset="assets/img/welcome-block-text-m.png" type="image/png" media="(max-width: 525px)">
+
+            <source srcset="assets/img/welcome-block-text.webp" type="image/webp" media="(min-width: 921px)">
+            <source srcset="assets/img/welcome-block-text.png" type="image/png" media="(min-width: 921px)">
+
+            <source srcset="assets/img/welcome-block-text-t.webp" type="image/webp" media="(min-width: 526px)">
+            <source srcset="assets/img/welcome-block-text-t.png" type="image/png" media="(min-width: 526px)">
+
+            <img src="assets/img/welcome-block-text.png" alt="Сообщество любителей самокатов">
+        </picture>
+    </div>
 </body>
 </html>
