--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
 
             <img src="assets/img/welcome-block-text.png" alt="Сообщество любителей самокатов">
         </picture>
-    </div>
+    </section>
 </body>
 </html>
