--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
-    <section class="welcome-block section">
+    <section class="section welcome-block">
         <svg xmlns="http://www.w3.org/2000/svg" class="welcome-block_logo" width="176" height="52" viewBox="0 0 176 52" fill="none">
             <path d="M139.016 0.935547H158.478C163.125 0.936031 167.581 2.78168 170.867 6.06658C174.153 9.35148 176 13.8066 176 18.4522V33.5494C176 35.8496 175.547 38.1273 174.666 40.2524C173.786 42.3775 172.495 44.3084 170.868 45.9348C169.241 47.5612 167.309 48.8513 165.183 49.7314C163.057 50.6115 160.779 51.0644 158.478 51.0641H139.216C136.915 51.0644 134.637 50.6115 132.511 49.7314C130.385 48.8513 128.454 47.5612 126.826 45.9348C125.199 44.3084 123.909 42.3775 123.028 40.2524C122.147 38.1273 121.694 35.8496 121.694 33.5494V18.4522C121.694 8.7763 129.336 0.935547 139.016 0.935547Z" fill="#21201F"/>
             <path d="M143.778 29.2782V28.4273H138.652V24.6402H148.646V29.1449C148.646 36.2352 145.259 40.3546 138.853 40.3546C132.247 40.3546 128.41 35.1506 128.41 25.975C128.41 17.0277 132.597 11.5498 140.279 11.5498C143.181 11.5498 145.684 12.3185 147.052 13.3192V17.2176C145.087 16.0003 142.824 15.3477 140.513 15.3314C135.475 15.3314 133.339 18.7515 133.339 25.975C133.339 32.9813 135.108 36.5657 138.944 36.5657C142.609 36.584 143.778 33.7482 143.778 29.2782Z" fill="white"/>
@@ -80,7 +80,7 @@
         </picture>
     </section>
 
-    <section class="advantages-block section">
+    <section class="section advantages-block">
         <h2 class="advantages-block_title">Вот что даёт участие<br class="hide-mob" />в клубе</h2>
         <div class="advantages-block_cards">
             <div class="advantages-block_card">
@@ -121,5 +121,11 @@
             </div>
         </div>
     </section>
+
+    <footer class="section footer">
+        <p class="footer_text">
+            Доп. опция «Абонемент на самокаты» на 8 месяцев (240 дней) активируется автоматически с момента старта сезона 2024 г. самокатов Яндекс Go, далее предусмотрено автопродление доп.опции за 399 руб./мес. Сертификат на доп.опцию «Абонемент на самокаты» на 8 месяцев оформляется на условиях документа <a class="footer_text-link" href="https://yandex.ru/legal/scooters_seasonpass" target="_blank" rel="noopener noreferrer">yandex.ru/legal/scooters_seasonpass</a>. Доп.опция доступна пользователям с активной подпиской (условия подписки: <a class="footer_text-link" href="" target="_blank" rel="noopener noreferrer">yandex.ru/legal/yandex_plus_conditions</a>), есть ограничения, подробнее: <a class="footer_text-link" href="https://yandex.ru/legal/yandex_plus_opzii_list" target="_blank" rel="noopener noreferrer">yandex.ru/legal/yandex_plus_opzii_list</a>. В случае отсутствия у пользователя активной подписки на дату активации доп.опции, пользователю предоставляется 7 дней подписки Яндекс Плюс бесплатно, далее автопродление — 299 руб./мес. Электросамокаты Яндекс Go — сервис аренды электросамокатов на условиях: <a class="footer_text-link" href="https://clck.ru/gwDGn" target="_blank" rel="noopener noreferrer">clck.ru/gwDGn</a>. 0+
+        </p>
+    </footer>
 </body>
 </html>
