Сделал первый оферный блок и загрузил оптимизированные пикчи

--- a/index.html
+++ b/index.html
@@ -122,6 +122,24 @@
         </div>
     </section>
 
+    <section class="section offer-block-info">
+        <div class="offer-block-info_content">
+            <h2 class="offer-block-info_content-title">
+                Купить абонемент и вступить в клуб смогут те, кто в Плюсе
+            </h2>
+            <p class="offer-block-info_content-text">
+                За каждую поездку на самокатах такие пользователи получают кешбэк баллами. Баллы можно тратить на поездки на самокатах и такси с Яндекс Go, покупки и заказы в других сервисах Яндекса
+            </p>
+        </div>
+        
+        <picture class="offer-block-info_img">
+            <source srcset="assets/img/offer_1.webp" type="image/webp" media="(min-width: 921px)">
+            <source srcset="assets/img/offer_1.png" type="image/png" media="(min-width: 921px)">
+
+            <img src="assets/img/offer_1.png" alt="Самокат Яндекс GO и баллы Плюса" width="914" height="893">
+        </picture>
+    </section>
+
     <footer class="section footer">
         <p class="footer_text">
             Доп. опция «Абонемент на самокаты» на 8 месяцев (240 дней) активируется автоматически с момента старта сезона 2024 г. самокатов Яндекс Go, далее предусмотрено автопродление доп.опции за 399 руб./мес. Сертификат на доп.опцию «Абонемент на самокаты» на 8 месяцев оформляется на условиях документа <a class="footer_text-link" href="https://yandex.ru/legal/scooters_seasonpass" target="_blank" rel="noopener noreferrer">yandex.ru/legal/scooters_seasonpass</a>. Доп.опция доступна пользователям с активной подпиской (условия подписки: <a class="footer_text-link" href="" target="_blank" rel="noopener noreferrer">yandex.ru/legal/yandex_plus_conditions</a>), есть ограничения, подробнее: <a class="footer_text-link" href="https://yandex.ru/legal/yandex_plus_opzii_list" target="_blank" rel="noopener noreferrer">yandex.ru/legal/yandex_plus_opzii_list</a>. В случае отсутствия у пользователя активной подписки на дату активации доп.опции, пользователю предоставляется 7 дней подписки Яндекс Плюс бесплатно, далее автопродление — 299 руб./мес. Электросамокаты Яндекс Go — сервис аренды электросамокатов на условиях: <a class="footer_text-link" href="https://clck.ru/gwDGn" target="_blank" rel="noopener noreferrer">clck.ru/gwDGn</a>. 0+
