--- a/index.html
+++ b/index.html
@@ -188,21 +188,21 @@
             <source srcset="assets/img/gp1.webp" type="image/webp" media="(min-width: 921px)">
             <source srcset="assets/img/gp1.png" type="image/png" media="(min-width: 921px)">
 
-            <img src="assets/img/gp1.png" alt="Декоративный элемент 1">
+            <img src="assets/img/gp1.png" alt="Декоративный элемент 1" width="364" height="364">
         </picture>
         
         <picture class="gallery-block_decor gallery-block_decor__2">
             <source srcset="assets/img/gp2.webp" type="image/webp" media="(min-width: 921px)">
             <source srcset="assets/img/gp2.png" type="image/png" media="(min-width: 921px)">
 
-            <img src="assets/img/gp2.png" alt="Декоративный элемент 2">
+            <img src="assets/img/gp2.png" alt="Декоративный элемент 2" width="524" height="592">
         </picture>
         
         <picture class="gallery-block_decor gallery-block_decor__3">
             <source srcset="assets/img/gp3.webp" type="image/webp" media="(min-width: 921px)">
             <source srcset="assets/img/gp3.png" type="image/png" media="(min-width: 921px)">
 
-            <img src="assets/img/gp3.png" alt="Декоративный элемент 3">
+            <img src="assets/img/gp3.png" alt="Декоративный элемент 3" width="597" height="540">
         </picture>
     </section>
 
