--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             Attaque de Panique
         </p>
 
-        <div class="gallery-block_gallery gallery">
+        <div class="gallery-block_gallery gallery" id="gallery">
             <div class="gallery_track">
                 <picture class="gallery_image">
                     <source srcset="assets/img/g1-m.webp" type="image/webp" media="(max-width: 920px)">
@@ -181,13 +181,13 @@
         </div>
 
         <div class="gallery-block_controls">
-            <button class="gallery-block_control-button" id="gaalery-left-btn" type="button" disabled>
+            <button class="gallery-block_control-button" id="galery-left-btn" type="button" disabled>
                 <svg class="gallery-block_control-icon gallery-block_control-icon__left" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewBox="0 0 27 24" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2647 1.39344L25.8107 10.9394C26.3964 11.5252 26.3964 12.4749 25.8107 13.0607L16.2647 22.6066C15.6789 23.1924 14.7292 23.1924 14.1434 22.6066C13.5576 22.0209 13.5576 21.0711 14.1434 20.4853L21.1287 13.5L2.25 13.5C1.42157 13.5 0.750001 12.8285 0.750001 12C0.750001 11.1716 1.42157 10.5 2.25 10.5L21.1287 10.5L14.1434 3.51476C13.5576 2.92897 13.5576 1.97923 14.1434 1.39344C14.7292 0.807654 15.6789 0.807654 16.2647 1.39344Z" fill="#21201F"/>
                 </svg>
             </button>
 
-            <button class="gallery-block_control-button" id="gaalery-right-btn" type="button">
+            <button class="gallery-block_control-button" id="galery-right-btn" type="button">
                 <svg class="gallery-block_control-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewBox="0 0 27 24" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2647 1.39344L25.8107 10.9394C26.3964 11.5252 26.3964 12.4749 25.8107 13.0607L16.2647 22.6066C15.6789 23.1924 14.7292 23.1924 14.1434 22.6066C13.5576 22.0209 13.5576 21.0711 14.1434 20.4853L21.1287 13.5L2.25 13.5C1.42157 13.5 0.750001 12.8285 0.750001 12C0.750001 11.1716 1.42157 10.5 2.25 10.5L21.1287 10.5L14.1434 3.51476C13.5576 2.92897 13.5576 1.97923 14.1434 1.39344C14.7292 0.807654 15.6789 0.807654 16.2647 1.39344Z" fill="#21201F"/>
                 </svg>
@@ -271,5 +271,7 @@
             Доп. опция «Абонемент на самокаты» на 8 месяцев (240 дней) активируется автоматически с момента старта сезона 2024 г. самокатов Яндекс Go, далее предусмотрено автопродление доп.опции за 399 руб./мес. Сертификат на доп.опцию «Абонемент на самокаты» на 8 месяцев оформляется на условиях документа <a class="footer_text-link" href="https://yandex.ru/legal/scooters_seasonpass" target="_blank" rel="noopener noreferrer">yandex.ru/legal/scooters_seasonpass</a>. Доп.опция доступна пользователям с активной подпиской (условия подписки: <a class="footer_text-link" href="" target="_blank" rel="noopener noreferrer">yandex.ru/legal/yandex_plus_conditions</a>), есть ограничения, подробнее: <a class="footer_text-link" href="https://yandex.ru/legal/yandex_plus_opzii_list" target="_blank" rel="noopener noreferrer">yandex.ru/legal/yandex_plus_opzii_list</a>. В случае отсутствия у пользователя активной подписки на дату активации доп.опции, пользователю предоставляется 7 дней подписки Яндекс Плюс бесплатно, далее автопродление — 299 руб./мес. Электросамокаты Яндекс Go — сервис аренды электросамокатов на условиях: <a class="footer_text-link" href="https://clck.ru/gwDGn" target="_blank" rel="noopener noreferrer">clck.ru/gwDGn</a>. 0+
         </p>
     </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
