Добавил полифил на плавный скролл

--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@
         </p>
     </footer>
 
+    <script src="assets/js/smooth-scroll.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
