--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="price-tag_old">3190₽</div>
             </div>
         </div>
-        <a href="#" class="welcome-block_action button">Стать частью клуба</a>
+        <a href="#" class="welcome-block_action button" aria-label="Стать частью клуба">Стать частью клуба</a>
 
         <picture class="welcome-block_main-image">
             <source srcset="assets/img/welcome-block-image-m.webp" type="image/webp" media="(max-width: 525px)">
@@ -181,13 +181,13 @@
         </div>
 
         <div class="gallery-block_controls">
-            <button class="gallery-block_control-button" id="galery-left-btn" type="button" disabled>
+            <button class="gallery-block_control-button" id="galery-left-btn" type="button" aria-label="Показать предыдущую фотографию" disabled>
                 <svg class="gallery-block_control-icon gallery-block_control-icon__left" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewBox="0 0 27 24" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2647 1.39344L25.8107 10.9394C26.3964 11.5252 26.3964 12.4749 25.8107 13.0607L16.2647 22.6066C15.6789 23.1924 14.7292 23.1924 14.1434 22.6066C13.5576 22.0209 13.5576 21.0711 14.1434 20.4853L21.1287 13.5L2.25 13.5C1.42157 13.5 0.750001 12.8285 0.750001 12C0.750001 11.1716 1.42157 10.5 2.25 10.5L21.1287 10.5L14.1434 3.51476C13.5576 2.92897 13.5576 1.97923 14.1434 1.39344C14.7292 0.807654 15.6789 0.807654 16.2647 1.39344Z" fill="#21201F"/>
                 </svg>
             </button>
 
-            <button class="gallery-block_control-button" id="galery-right-btn" type="button">
+            <button class="gallery-block_control-button" id="galery-right-btn" type="button" aria-label="Показать следующую фотографию">
                 <svg class="gallery-block_control-icon" xmlns="http://www.w3.org/2000/svg" width="27" height="24" viewBox="0 0 27 24" fill="none">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2647 1.39344L25.8107 10.9394C26.3964 11.5252 26.3964 12.4749 25.8107 13.0607L16.2647 22.6066C15.6789 23.1924 14.7292 23.1924 14.1434 22.6066C13.5576 22.0209 13.5576 21.0711 14.1434 20.4853L21.1287 13.5L2.25 13.5C1.42157 13.5 0.750001 12.8285 0.750001 12C0.750001 11.1716 1.42157 10.5 2.25 10.5L21.1287 10.5L14.1434 3.51476C13.5576 2.92897 13.5576 1.97923 14.1434 1.39344C14.7292 0.807654 15.6789 0.807654 16.2647 1.39344Z" fill="#21201F"/>
                 </svg>
@@ -262,7 +262,7 @@
             <p class="offer-block-info_content-text">
                 Присоединяйтесь — опция начнёт действовать в начале сезона–2024. Об открытии сезона предупредим заранее, чтобы вы были готовы
             </p>
-            <a href="#" class="offer-block-info_content-action button">Хочу абонемент</a>
+            <a href="#" class="offer-block-info_content-action button" aria-label="Хочу абонемент">Хочу абонемент</a>
         </div>
     </section>
 
