Поправил ссылку в подвале

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             на доп.опцию «Абонемент на самокаты» на 8 месяцев оформляется на условиях документа <a
                 class="footer_text-link" href="https://yandex.ru/legal/scooters_seasonpass" target="_blank"
                 rel="noopener noreferrer">yandex.ru/legal/scooters_seasonpass</a>. Доп.опция доступна пользователям с
-            активной подпиской (условия подписки: <a class="footer_text-link" href="" target="_blank"
+            активной подпиской (условия подписки: <a class="footer_text-link" href="https://yandex.ru/legal/yandex_plus_conditions" target="_blank"
                 rel="noopener noreferrer">yandex.ru/legal/yandex_plus_conditions</a>), есть ограничения, подробнее: <a
                 class="footer_text-link" href="https://yandex.ru/legal/yandex_plus_opzii_list" target="_blank"
                 rel="noopener noreferrer">yandex.ru/legal/yandex_plus_opzii_list</a>. В случае отсутствия у пользователя
